--- a/components/button.css
+++ b/components/button.css
@@ -1,9 +1,8 @@
 .button {
-    background-color: #FFD60A;
+    background-color: #EA2127;
     border: 2px solid #000614;
-    border-radius: 20px;
-    box-shadow: #000614 4px 4px 0 0;
-    color: #000614;
+    border-radius: 10px;
+    color: #FFFFFF;
     cursor: pointer;
     display: inline-block;
     font-weight: 600;
@@ -15,14 +14,11 @@
     user-select: none;
     -webkit-user-select: none;
     touch-action: manipulation;
+    transition: 0.3s all ease-in-out;
 }
 .button:hover {
-    transform: scale(1.05) rotate(-1deg);
     background-color: #FFFFFF;
-}
-.button:active {
-    box-shadow: #422800 2px 2px 0 0;
-    transform: translate(2px, 2px);
+    color: #EA2127;
 }
 @media (min-width: 768px) {
     .button {
@@ -30,13 +26,12 @@
         padding: 0 25px;
     }
 }
-#wrapper {
-    background-color: #000614;
-    color: #FFFFFF;
-    min-width: 1000px;
-}
 .content {
     width: 80%;
     min-width: 1000px;
     margin: auto;
+}
+#wrapper {
+    margin: 0px;
+    padding: 0px;
 }
