--- a/components/footer.html
+++ b/components/footer.html
@@ -1,51 +1,7 @@
-const footerTemplate = document.createElement('template')
-
-footerTemplate.innerHTML = `
-    <style>
-        #footer {
-            padding-top: 10px;
-            display: flex;
-            justify-content: space-between;
-            width: 80%;
-            margin: auto;
-            min-width: 1000px;
-        }
-        #copyright {
-            text-align: center;
-            padding-top: 20px;
-            padding-bottom: 5px;
-            width: 80%;
-            margin: auto;
-            min-width: 1000px;
-        }
-        footer {
-            background-color: #000000;
-            color: #FFFFFF;
-            min-width: 1000px;
-        }
-        a {
-            font-family: Tahoma, Trebuchet MS;
-            color: #FFFFFF;
-            text-decoration: None;
-        }
-        a:hover {
-            color: #EA2127;
-            -moz-transition: all .3s ease-in;
-            -o-transition: all .3s ease-in;
-            -webkit-transition: all .3s ease-in;
-            transition: all .3s ease-in;
-        }
-        #email-address {
-            text-decoration: #FFFFFF;
-        }
-        .title {
-            font-size: 20px
-        }
-        img {
-            vertical-align: bottom;
-        }
-    </style>
-    <footer>
+<!DOCTYPE html>
+<html lang="en">
+<body>
+    <section class="footer">
         <div id="footer">
             <div id="movies">
                 <img src="/f32ee/Screens-Come-True/img/footer_movie.png" alt="title" height="30" width="30">
@@ -77,17 +33,6 @@ footerTemplate.innerHTML = `
             <small>Copyrights Reserved &copy; 2021 Screens Come True. All Rights Reserved.</small>
         </div>
     </footer>
-    `;
-
-class Footer extends HTMLElement {
-    constructor() {
-        super();
-    }
-
-    connectedCallback() {
-        const shadowRoot = this.attachShadow({ mode: "closed" });
-        shadowRoot.appendChild(footerTemplate.content);
-    }
-}
-
-customElements.define('footer-component', Footer);
+</section>
+</body>
+</html>
