--- a/components/header.html
+++ b/components/header.html
@@ -3,18 +3,18 @@
 <body>
     <section class="header">
         <div id="menu-bar">
-            <a href="/f32ee/Screens-Come-True/index.php"><img src="/f32ee/Screens-Come-True/img/header_title.png" alt="Logo"></a>
+            <a href="index.php"><img src="img/header_title.png" alt="Logo"></a>
             <nav>
                 <div id="navigation-bar">
                     <ul>
-                        <li><a id="movies" href="/f32ee/Screens-Come-True/pages/movies.php"><strong>Movies</strong></a></li>
-                        <li><a id="cinemas" href="#"><strong>Our Cinemas</strong></a></li>
+                        <li><a id="movies" href="movies.php"><strong>Movies</strong></a></li>
+                        <li><a id="cinemas" href="cinemas.php"><strong>Our Cinemas</strong></a></li>
                         <li><a id="promotions" href="#"><strong>Promotions</strong></a></li>
                     </ul>
                 </div>
             </nav>
             <div id="login-register-section">
-                <a class="login" href="/f32ee/Screens-Come-True/pages/loginmain.php#login" id="login">Log In</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a class="login" href="/f32ee/Screens-Come-True/pages/loginmain.php#register" id="register">Register</a>
+                <a class="login" href="login.php#login" id="login">Log In</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a class="login" href="login.php#register" id="register">Register</a>
             </div>            
         </div>
     </section>
