--- a/components/header_userloginsess.html
+++ b/components/header_userloginsess.html
@@ -4,23 +4,23 @@
     <section class="header">
         <div id="menu-bar">
             <div class="logo">
-                <a href="/f32ee/Screens-Come-True/index.php"><img src="/f32ee/Screens-Come-True/img/header_title.png" alt="Logo"></a>
+                <a href="index.php"><img src="img/header_title.png" alt="Logo"></a>
             </div>
 
             <nav>
                 <div id="navigation-bar">
                     <ul>
-                        <li><a id="movies" href="/f32ee/Screens-Come-True/pages/movies.php"><strong>Movies</strong></a></li>
-                        <li><a id="cinemas" href="#"><strong>Our Cinemas</strong></a></li>
+                        <li><a id="movies" href="movies.php"><strong>Movies</strong></a></li>
+                        <li><a id="cinemas" href="cinemas.php"><strong>Our Cinemas</strong></a></li>
                         <li><a id="promotions" href="#"><strong>Promotions</strong></a></li>
                     </ul>
                 </div>
             </nav>
             <div class="dropdown">
-                <img id="validuser" src="/f32ee/Screens-Come-True/img/valid_user.png" width="60" height="60">   
+                <img id="validuser" src="img/valid_user.png" width="60" height="60">   
                 <div class="dropdown-content">
-                    <a href="/f32ee/Screens-Come-True/pages/feedback.html">Provide Feedback</a>
-                    <a href="/f32ee/Screens-Come-True/pages/signout.php">Sign Out</a>
+                    <a href="feedback.html">Provide Feedback</a>
+                    <a href="signout.php">Sign Out</a>
                 </div>
             </div>       
         </div>
