--- a/css/button.css
+++ b/css/button.css
@@ -26,7 +26,7 @@
         padding: 0 25px;
     }
 }
-.content {
+/* .content {
     width: 80%;
     min-width: 1000px;
     margin: auto;
@@ -34,4 +34,4 @@
 #wrapper {
     margin: 0px;
     padding: 0px;
-}
+} */
