--- a/css/footer.css
+++ b/css/footer.css
@@ -25,7 +25,7 @@ footer {
     color: #FFFFFF;
     min-width: 1000px;
 }
-a {
+#footer a {
     font-family: Tahoma, Trebuchet MS;
     color: #FFFFFF;
     text-decoration: None;
