--- a/components/header.html
+++ b/components/header.html
@@ -27,10 +27,13 @@
         if (url.indexOf('movies') > -1) {
             element = document.getElementById('movies');
             element.setAttribute("class","active");
+        } else if (url.indexOf('movieDetails') > -1) {
+            element = document.getElementById('movies');
+            element.setAttribute("class","active");
         } else if (url.indexOf('cinemas') > -1) {
             element = document.getElementById('cinemas');
             element.setAttribute("class","active");
-        }else if (url.indexOf('promotions') > -1) {
+        } else if (url.indexOf('promotions') > -1) {
             element = document.getElementById('promotions');
             element.setAttribute("class","active");
         }
