--- a/components/header_userloginsess.html
+++ b/components/header_userloginsess.html
@@ -33,9 +33,12 @@
         var element
         if (url.indexOf('movies') > -1) {
             element = document.getElementById('movies');
+        } else if (url.indexOf('movieDetails') > -1) {
+            element = document.getElementById('movies');
+            element.setAttribute("class","active");
         } else if (url.indexOf('cinemas') > -1) {
             element = document.getElementById('cinemas');
-        }else if (url.indexOf('promotions') > -1) {
+        } else if (url.indexOf('promotions') > -1) {
             element = document.getElementById('promotions');
         }
         element.setAttribute("class","active");
