--- a/css/index.css
+++ b/css/index.css
@@ -169,7 +169,7 @@ hr {
     width: 180px;
     height: 60px;
     position: relative;
-    background: red;
+    background: #EA2127;
     display: flex;
     align-items: center;
 }
@@ -191,7 +191,7 @@ hr {
     bottom: 0;
     width: 0;
     height: 0;
-    border-left: 30px solid red;
+    border-left: 30px solid #EA2127;
     border-top: 30px solid transparent;
     border-bottom: 30px solid transparent;
 }
@@ -205,7 +205,7 @@ hr {
     align-items: center;
 }
 .arrow-in-circle {
-    background: red;
+    background: #EA2127;
     text-decoration:none; /* Remove that ugly underlining */
     border-radius: 50%;
     display: block;
