--- a/css/footer.css
+++ b/css/footer.css
@@ -10,6 +10,7 @@ section {
     width: 80%;
     margin: auto;
     min-width: 1000px;
+    max-width: 1280px;
     background-color: #000000;
 }
 #copyright {
@@ -26,7 +27,7 @@ footer {
     min-width: 1000px;
 }
 #footer a {
-    font-family: Tahoma, Trebuchet MS;
+    font-family: Helvetica, Tahoma, Trebuchet MS;
     color: #FFFFFF;
     text-decoration: None;
 }
