--- a/css/header.css
+++ b/css/header.css
@@ -4,6 +4,7 @@
     display: flex;
     width: 80%;
     min-width: 1000px;
+    max-width: 1280px;
     margin: 0 auto;
     justify-content: space-between;
     align-items: center;
@@ -14,7 +15,7 @@
     align-items: center;
 }
 .header ul {
-    font-family: Tahoma, Trebuchet MS;
+    font-family: Helvetica, Tahoma, Trebuchet MS;
     letter-spacing: 0.05em;
     display: flex;
     justify-content: center;
@@ -27,7 +28,7 @@
     text-decoration: none;
     color: #FFFFFF;
     font-weight: bold;
-    font-family: Tahoma, Trebuchet MS;
+    font-family: Helvetica, Tahoma, Trebuchet MS;
     letter-spacing: 0.05em;
 }
 .header a:hover {
