--- a/components/header.html
+++ b/components/header.html
@@ -9,7 +9,7 @@
                     <ul>
                         <li><a id="movies" href="movies.php"><strong>Movies</strong></a></li>
                         <li><a id="cinemas" href="cinemas.php"><strong>Our Cinemas</strong></a></li>
-                        <li><a id="promotions" href="#"><strong>Promotions</strong></a></li>
+                        <li><a id="promotions" href="promotions.php"><strong>Promotions</strong></a></li>
                     </ul>
                 </div>
             </nav>
