--- a/components/footer.html
+++ b/components/footer.html
@@ -21,7 +21,7 @@
             <div id="support-us">
                 <img src="img/footer/footer_support.png" alt="title" height="30" width="30">
                 <a class="title"><strong>Support Us</strong></a>
-                <p><a href="pages/feedback.html">Provide Feedback</a></p>
+                <p><a href="./feedback.php">Provide Feedback</a></p>
             </div>
             <div id="contact-us">
                 <img src="img/footer/footer_contact.png" alt="title" height="30" width="30">
