Add breadcrumbs to all the pages

--- a/css/main.css
+++ b/css/main.css
@@ -20,7 +20,7 @@ body {
 }
 
 .current-page-breadcrumb {
-    color: #EA2127;
+    color: #FFD60A;
 }
 .other-page-breadcrumb {
     color: #FFFFFF;
