--- a/components/header.html
+++ b/components/header.html
@@ -14,7 +14,7 @@
                 </div>
             </nav>
             <div id="login-register-section">
-                <a class="login" href="login.php#login" id="login">Log In</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a class="login" href="login.php#register" id="register">Register</a>
+                <a class="login" href="login.php?action=login" id="login">Log In</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a class="login" href="login.php?action=register" id="register">Register</a>
             </div>            
         </div>
     </section>
