--- a/components/header_userloginsess.html
+++ b/components/header_userloginsess.html
@@ -19,7 +19,7 @@
             <div class="dropdown">
                 <img id="validuser" src="img/valid_user.png" width="60" height="60">   
                 <div class="dropdown-content">
-                    <a href="feedback.html">Provide Feedback</a>
+                    <a href="feedback.php">Provide Feedback</a>
                     <a href="signout.php">Sign Out</a>
                 </div>
             </div>       
