--- a/css/index.css
+++ b/css/index.css
@@ -303,9 +303,6 @@ hr {
     display: flex;
     align-items: center;
 }
-#pointer a:hover {
-    color: #ffd701;
-}
 #pointer:after {
     content: "";
     position: absolute;
@@ -327,6 +324,12 @@ hr {
     border-left: 30px solid #EA2127;
     border-top: 30px solid transparent;
     border-bottom: 30px solid transparent;
+}
+#pointer:hover {
+    background: #FFFFFF;
+}
+#pointer a:hover {
+    color: #EA2127;
 }
 .movie-running-time {
     color: #8c8c8c;
