--- a/components/footer.html
+++ b/components/footer.html
@@ -6,17 +6,17 @@
             <div id="movies">
                 <img src="img/footer/footer_movie.png" alt="title" height="30" width="30">
                 <a class="title"><strong>Movies</strong></a>
-                <p><a>Now Showing</a><br><a>Coming Soon</a></p>
+                <p><a href="./movies.php">Now Showing</a><br><a href="./movies.php?action=comingSoon">Coming Soon</a></p>
             </div>
             <div id="cinemas">
                 <img src="img/footer/footer_cinema.png" alt="title" height="30" width="30">
                 <a class="title"><strong>Cinemas</strong></a>
-                <p><a>Discover Our Cinemas</a><br><a>Cinema Experience</a></p>
+                <p><a href="./cinemas.php">Discover Our Cinemas</a></p>
             </div>
             <div id="promotions">
             <img src="img/footer/footer_promotions.png" alt="title" height="30" width="30">
                 <a class="title"><strong>Promotions</strong></a>
-                <p><a>Food & Beverages</a><br><a>Merchandise</a></p>
+                <p><a href="./promotions.php">Food & Beverages</a><br><a href="./promotions.php?action=merchandise">Merchandise</a></p>
             </div>
             <div id="support-us">
                 <img src="img/footer/footer_support.png" alt="title" height="30" width="30">
