--- a/css/index.css
+++ b/css/index.css
@@ -6,6 +6,7 @@
 .bolt-quicksearch {
     margin-top: 20px;
     background-color: #000000;
+    border-radius: 20px 20px 0px 0px;
     color: #FFFFFF;
     width: 300px;
     height: 60px;
